--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.3
-tensorflow==2.13.0
-opencv-python-headless==4.8.1.78
-Pillow==10.0.1
-gunicorn==21.2.0
+Flask==3.0.0
+tensorflow==2.20.0
+opencv-python-headless==4.10.0.84
+Pillow==11.0.0
+gunicorn==23.0.0
+Werkzeug==3.0.4
+numpy==1.26.4
